nlp/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    GO
    SORT

Grammar

Rule 0     S' -> main
Rule 1     main -> MOVEITEM fulltype ITEM id FROM rack TO rack side
Rule 2     main -> MOVEITEM fulltype ITEM id FROM rack TO side rack
Rule 3     main -> MOVEITEM fulltype ITEM id TO rack side FROM rack
Rule 4     main -> MOVEITEM fulltype ITEM id TO side rack FROM rack
Rule 5     main -> MOVEITEM ITEM fulltype id FROM rack TO rack side
Rule 6     main -> MOVEITEM ITEM fulltype id FROM rack TO side rack
Rule 7     main -> MOVEITEM ITEM fulltype id TO rack side FROM rack
Rule 8     main -> MOVEITEM ITEM fulltype id TO side rack FROM rack
Rule 9     main -> MOVEITEM ITEM id fulltype FROM rack TO rack side
Rule 10    main -> MOVEITEM ITEM id fulltype FROM rack TO side rack
Rule 11    main -> MOVEITEM ITEM id fulltype TO rack side FROM rack
Rule 12    main -> MOVEITEM ITEM id fulltype TO side rack FROM rack
Rule 13    main -> FROM rack MOVEITEM fulltype ITEM id TO rack side
Rule 14    main -> FROM rack MOVEITEM fulltype ITEM id TO side rack
Rule 15    main -> FROM rack MOVEITEM ITEM fulltype id TO rack side
Rule 16    main -> FROM rack MOVEITEM ITEM fulltype id TO side rack
Rule 17    main -> FROM rack MOVEITEM ITEM id fulltype TO rack side
Rule 18    main -> FROM rack MOVEITEM ITEM id fulltype TO side rack
Rule 19    main -> FROM rack TO rack side MOVEITEM fulltype ITEM id
Rule 20    main -> FROM rack TO side rack MOVEITEM fulltype ITEM id
Rule 21    main -> FROM rack TO rack side MOVEITEM ITEM fulltype id
Rule 22    main -> FROM rack TO side rack MOVEITEM ITEM fulltype id
Rule 23    main -> FROM rack TO rack side MOVEITEM ITEM id fulltype
Rule 24    main -> FROM rack TO side rack MOVEITEM ITEM id fulltype
Rule 25    main -> moveitem fulltype ITEM id TO rack side
Rule 26    main -> moveitem fulltype ITEM id TO side rack
Rule 27    main -> moveitem ITEM fulltype id TO rack side
Rule 28    main -> moveitem ITEM fulltype id TO side rack
Rule 29    main -> moveitem ITEM id fulltype TO rack side
Rule 30    main -> moveitem ITEM id fulltype TO side rack
Rule 31    main -> TO rack side moveitem fulltype ITEM id
Rule 32    main -> TO side rack moveitem fulltype ITEM id
Rule 33    main -> TO rack side moveitem ITEM fulltype id
Rule 34    main -> TO side rack moveitem ITEM fulltype id
Rule 35    main -> TO rack side moveitem ITEM id fulltype
Rule 36    main -> TO side rack moveitem ITEM id fulltype
Rule 37    main -> FIND ITEM fulltype id
Rule 38    main -> FIND ITEM id fulltype
Rule 39    main -> FIND fulltype ITEM id
Rule 40    main -> PICK fulltype ITEM FROM rack id
Rule 41    main -> PICK fulltype ITEM id FROM rack
Rule 42    main -> PICK ITEM fulltype id FROM rack
Rule 43    main -> PICK ITEM id fulltype FROM rack
Rule 44    main -> FROM rack PICK fulltype ITEM id
Rule 45    main -> FROM rack PICK ITEM fulltype id
Rule 46    main -> FROM rack PICK ITEM id fulltype
Rule 47    main -> PICK fulltype ITEM id
Rule 48    main -> PICK ITEM fulltype id
Rule 49    main -> PICK ITEM id fulltype
Rule 50    fulltype -> color material category
Rule 51    fulltype -> color category material
Rule 52    fulltype -> material category color
Rule 53    fulltype -> material color category
Rule 54    fulltype -> category material color
Rule 55    fulltype -> category color material
Rule 56    material -> MATERIAL
Rule 57    material -> empty
Rule 58    color -> COLOR
Rule 59    color -> empty
Rule 60    category -> CATEGORY
Rule 61    category -> empty
Rule 62    moveitem -> MOVEITEM
Rule 63    moveitem -> LAY
Rule 64    rack -> shelf lvl
Rule 65    rack -> lvl shelf
Rule 66    shelf -> SHELF num
Rule 67    shelf -> num SHELF
Rule 68    lvl -> LVL num
Rule 69    lvl -> num LVL
Rule 70    lvl -> empty
Rule 71    side -> TO SIDE
Rule 72    side -> SIDE
Rule 73    side -> empty
Rule 74    num -> NUM
Rule 75    num -> empty
Rule 76    id -> ID
Rule 77    id -> emptyid
Rule 78    emptyid -> <empty>
Rule 79    empty -> <empty>

Terminals, with rules where they appear

CATEGORY             : 60
COLOR                : 58
FIND                 : 37 38 39
FROM                 : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 40 41 42 43 44 45 46
GO                   : 
ID                   : 76
ITEM                 : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
LAY                  : 63
LVL                  : 68 69
MATERIAL             : 56
MOVEITEM             : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 62
NUM                  : 74
PICK                 : 40 41 42 43 44 45 46 47 48 49
SHELF                : 66 67
SIDE                 : 71 72
SORT                 : 
TO                   : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 71
error                : 

Nonterminals, with rules where they appear

category             : 50 51 52 53 54 55
color                : 50 51 52 53 54 55
empty                : 57 59 61 70 73 75
emptyid              : 77
fulltype             : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
id                   : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
lvl                  : 64 65
main                 : 0
material             : 50 51 52 53 54 55
moveitem             : 25 26 27 28 29 30 31 32 33 34 35 36
num                  : 66 67 68 69
rack                 : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 26 27 28 29 30 31 32 33 34 35 36 40 41 42 43 44 45 46
shelf                : 64 65
side                 : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . MOVEITEM fulltype ITEM id FROM rack TO rack side
    (2) main -> . MOVEITEM fulltype ITEM id FROM rack TO side rack
    (3) main -> . MOVEITEM fulltype ITEM id TO rack side FROM rack
    (4) main -> . MOVEITEM fulltype ITEM id TO side rack FROM rack
    (5) main -> . MOVEITEM ITEM fulltype id FROM rack TO rack side
    (6) main -> . MOVEITEM ITEM fulltype id FROM rack TO side rack
    (7) main -> . MOVEITEM ITEM fulltype id TO rack side FROM rack
    (8) main -> . MOVEITEM ITEM fulltype id TO side rack FROM rack
    (9) main -> . MOVEITEM ITEM id fulltype FROM rack TO rack side
    (10) main -> . MOVEITEM ITEM id fulltype FROM rack TO side rack
    (11) main -> . MOVEITEM ITEM id fulltype TO rack side FROM rack
    (12) main -> . MOVEITEM ITEM id fulltype TO side rack FROM rack
    (13) main -> . FROM rack MOVEITEM fulltype ITEM id TO rack side
    (14) main -> . FROM rack MOVEITEM fulltype ITEM id TO side rack
    (15) main -> . FROM rack MOVEITEM ITEM fulltype id TO rack side
    (16) main -> . FROM rack MOVEITEM ITEM fulltype id TO side rack
    (17) main -> . FROM rack MOVEITEM ITEM id fulltype TO rack side
    (18) main -> . FROM rack MOVEITEM ITEM id fulltype TO side rack
    (19) main -> . FROM rack TO rack side MOVEITEM fulltype ITEM id
    (20) main -> . FROM rack TO side rack MOVEITEM fulltype ITEM id
    (21) main -> . FROM rack TO rack side MOVEITEM ITEM fulltype id
    (22) main -> . FROM rack TO side rack MOVEITEM ITEM fulltype id
    (23) main -> . FROM rack TO rack side MOVEITEM ITEM id fulltype
    (24) main -> . FROM rack TO side rack MOVEITEM ITEM id fulltype
    (25) main -> . moveitem fulltype ITEM id TO rack side
    (26) main -> . moveitem fulltype ITEM id TO side rack
    (27) main -> . moveitem ITEM fulltype id TO rack side
    (28) main -> . moveitem ITEM fulltype id TO side rack
    (29) main -> . moveitem ITEM id fulltype TO rack side
    (30) main -> . moveitem ITEM id fulltype TO side rack
    (31) main -> . TO rack side moveitem fulltype ITEM id
    (32) main -> . TO side rack moveitem fulltype ITEM id
    (33) main -> . TO rack side moveitem ITEM fulltype id
    (34) main -> . TO side rack moveitem ITEM fulltype id
    (35) main -> . TO rack side moveitem ITEM id fulltype
    (36) main -> . TO side rack moveitem ITEM id fulltype
    (37) main -> . FIND ITEM fulltype id
    (38) main -> . FIND ITEM id fulltype
    (39) main -> . FIND fulltype ITEM id
    (40) main -> . PICK fulltype ITEM FROM rack id
    (41) main -> . PICK fulltype ITEM id FROM rack
    (42) main -> . PICK ITEM fulltype id FROM rack
    (43) main -> . PICK ITEM id fulltype FROM rack
    (44) main -> . FROM rack PICK fulltype ITEM id
    (45) main -> . FROM rack PICK ITEM fulltype id
    (46) main -> . FROM rack PICK ITEM id fulltype
    (47) main -> . PICK fulltype ITEM id
    (48) main -> . PICK ITEM fulltype id
    (49) main -> . PICK ITEM id fulltype
    (62) moveitem -> . MOVEITEM
    (63) moveitem -> . LAY

    MOVEITEM        shift and go to state 4
    FROM            shift and go to state 5
    TO              shift and go to state 8
    FIND            shift and go to state 1
    PICK            shift and go to state 7
    LAY             shift and go to state 3

    main                           shift and go to state 6
    moveitem                       shift and go to state 2

state 1

    (37) main -> FIND . ITEM fulltype id
    (38) main -> FIND . ITEM id fulltype
    (39) main -> FIND . fulltype ITEM id
    (50) fulltype -> . color material category
    (51) fulltype -> . color category material
    (52) fulltype -> . material category color
    (53) fulltype -> . material color category
    (54) fulltype -> . category material color
    (55) fulltype -> . category color material
    (58) color -> . COLOR
    (59) color -> . empty
    (56) material -> . MATERIAL
    (57) material -> . empty
    (60) category -> . CATEGORY
    (61) category -> . empty
    (79) empty -> .

  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for ITEM resolved as shift
  ! shift/reduce conflict for COLOR resolved as shift
    ITEM            shift and go to state 14
    COLOR           shift and go to state 10
    MATERIAL        shift and go to state 9
    CATEGORY        shift and go to state 17

  ! MATERIAL        [ reduce using rule 79 (empty -> .) ]
  ! CATEGORY        [ reduce using rule 79 (empty -> .) ]
  ! ITEM            [ reduce using rule 79 (empty -> .) ]
  ! COLOR           [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 12
    material                       shift and go to state 11
    category                       shift and go to state 13
    color                          shift and go to state 15
    fulltype                       shift and go to state 16

state 2

    (25) main -> moveitem . fulltype ITEM id TO rack side
    (26) main -> moveitem . fulltype ITEM id TO side rack
    (27) main -> moveitem . ITEM fulltype id TO rack side
    (28) main -> moveitem . ITEM fulltype id TO side rack
    (29) main -> moveitem . ITEM id fulltype TO rack side
    (30) main -> moveitem . ITEM id fulltype TO side rack
    (50) fulltype -> . color material category
    (51) fulltype -> . color category material
    (52) fulltype -> . material category color
    (53) fulltype -> . material color category
    (54) fulltype -> . category material color
    (55) fulltype -> . category color material
    (58) color -> . COLOR
    (59) color -> . empty
    (56) material -> . MATERIAL
    (57) material -> . empty
    (60) category -> . CATEGORY
    (61) category -> . empty
    (79) empty -> .

  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for ITEM resolved as shift
  ! shift/reduce conflict for COLOR resolved as shift
    ITEM            shift and go to state 18
    COLOR           shift and go to state 10
    MATERIAL        shift and go to state 9
    CATEGORY        shift and go to state 17

  ! MATERIAL        [ reduce using rule 79 (empty -> .) ]
  ! CATEGORY        [ reduce using rule 79 (empty -> .) ]
  ! ITEM            [ reduce using rule 79 (empty -> .) ]
  ! COLOR           [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 12
    material                       shift and go to state 11
    category                       shift and go to state 13
    color                          shift and go to state 15
    fulltype                       shift and go to state 19

state 3

    (63) moveitem -> LAY .

    ITEM            reduce using rule 63 (moveitem -> LAY .)
    COLOR           reduce using rule 63 (moveitem -> LAY .)
    MATERIAL        reduce using rule 63 (moveitem -> LAY .)
    CATEGORY        reduce using rule 63 (moveitem -> LAY .)


state 4

    (1) main -> MOVEITEM . fulltype ITEM id FROM rack TO rack side
    (2) main -> MOVEITEM . fulltype ITEM id FROM rack TO side rack
    (3) main -> MOVEITEM . fulltype ITEM id TO rack side FROM rack
    (4) main -> MOVEITEM . fulltype ITEM id TO side rack FROM rack
    (5) main -> MOVEITEM . ITEM fulltype id FROM rack TO rack side
    (6) main -> MOVEITEM . ITEM fulltype id FROM rack TO side rack
    (7) main -> MOVEITEM . ITEM fulltype id TO rack side FROM rack
    (8) main -> MOVEITEM . ITEM fulltype id TO side rack FROM rack
    (9) main -> MOVEITEM . ITEM id fulltype FROM rack TO rack side
    (10) main -> MOVEITEM . ITEM id fulltype FROM rack TO side rack
    (11) main -> MOVEITEM . ITEM id fulltype TO rack side FROM rack
    (12) main -> MOVEITEM . ITEM id fulltype TO side rack FROM rack
    (62) moveitem -> MOVEITEM .
    (50) fulltype -> . color material category
    (51) fulltype -> . color category material
    (52) fulltype -> . material category color
    (53) fulltype -> . material color category
    (54) fulltype -> . category material color
    (55) fulltype -> . category color material
    (58) color -> . COLOR
    (59) color -> . empty
    (56) material -> . MATERIAL
    (57) material -> . empty
    (60) category -> . CATEGORY
    (61) category -> . empty
    (79) empty -> .

  ! shift/reduce conflict for ITEM resolved as shift
  ! shift/reduce conflict for COLOR resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for ITEM resolved as shift
  ! shift/reduce conflict for COLOR resolved as shift
    ITEM            shift and go to state 20
    COLOR           shift and go to state 10
    MATERIAL        shift and go to state 9
    CATEGORY        shift and go to state 17

  ! ITEM            [ reduce using rule 62 (moveitem -> MOVEITEM .) ]
  ! COLOR           [ reduce using rule 62 (moveitem -> MOVEITEM .) ]
  ! MATERIAL        [ reduce using rule 62 (moveitem -> MOVEITEM .) ]
  ! CATEGORY        [ reduce using rule 62 (moveitem -> MOVEITEM .) ]
  ! MATERIAL        [ reduce using rule 79 (empty -> .) ]
  ! CATEGORY        [ reduce using rule 79 (empty -> .) ]
  ! ITEM            [ reduce using rule 79 (empty -> .) ]
  ! COLOR           [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 12
    material                       shift and go to state 11
    category                       shift and go to state 13
    color                          shift and go to state 15
    fulltype                       shift and go to state 21

state 5

    (13) main -> FROM . rack MOVEITEM fulltype ITEM id TO rack side
    (14) main -> FROM . rack MOVEITEM fulltype ITEM id TO side rack
    (15) main -> FROM . rack MOVEITEM ITEM fulltype id TO rack side
    (16) main -> FROM . rack MOVEITEM ITEM fulltype id TO side rack
    (17) main -> FROM . rack MOVEITEM ITEM id fulltype TO rack side
    (18) main -> FROM . rack MOVEITEM ITEM id fulltype TO side rack
    (19) main -> FROM . rack TO rack side MOVEITEM fulltype ITEM id
    (20) main -> FROM . rack TO side rack MOVEITEM fulltype ITEM id
    (21) main -> FROM . rack TO rack side MOVEITEM ITEM fulltype id
    (22) main -> FROM . rack TO side rack MOVEITEM ITEM fulltype id
    (23) main -> FROM . rack TO rack side MOVEITEM ITEM id fulltype
    (24) main -> FROM . rack TO side rack MOVEITEM ITEM id fulltype
    (44) main -> FROM . rack PICK fulltype ITEM id
    (45) main -> FROM . rack PICK ITEM fulltype id
    (46) main -> FROM . rack PICK ITEM id fulltype
    (64) rack -> . shelf lvl
    (65) rack -> . lvl shelf
    (66) shelf -> . SHELF num
    (67) shelf -> . num SHELF
    (68) lvl -> . LVL num
    (69) lvl -> . num LVL
    (70) lvl -> . empty
    (74) num -> . NUM
    (75) num -> . empty
    (79) empty -> .

  ! shift/reduce conflict for SHELF resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for LVL resolved as shift
    SHELF           shift and go to state 26
    LVL             shift and go to state 29
    NUM             shift and go to state 23

  ! SHELF           [ reduce using rule 79 (empty -> .) ]
  ! NUM             [ reduce using rule 79 (empty -> .) ]
  ! LVL             [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 27
    lvl                            shift and go to state 22
    shelf                          shift and go to state 28
    rack                           shift and go to state 24
    num                            shift and go to state 25

state 6

    (0) S' -> main .



state 7

    (40) main -> PICK . fulltype ITEM FROM rack id
    (41) main -> PICK . fulltype ITEM id FROM rack
    (42) main -> PICK . ITEM fulltype id FROM rack
    (43) main -> PICK . ITEM id fulltype FROM rack
    (47) main -> PICK . fulltype ITEM id
    (48) main -> PICK . ITEM fulltype id
    (49) main -> PICK . ITEM id fulltype
    (50) fulltype -> . color material category
    (51) fulltype -> . color category material
    (52) fulltype -> . material category color
    (53) fulltype -> . material color category
    (54) fulltype -> . category material color
    (55) fulltype -> . category color material
    (58) color -> . COLOR
    (59) color -> . empty
    (56) material -> . MATERIAL
    (57) material -> . empty
    (60) category -> . CATEGORY
    (61) category -> . empty
    (79) empty -> .

  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for ITEM resolved as shift
  ! shift/reduce conflict for COLOR resolved as shift
    ITEM            shift and go to state 30
    COLOR           shift and go to state 10
    MATERIAL        shift and go to state 9
    CATEGORY        shift and go to state 17

  ! MATERIAL        [ reduce using rule 79 (empty -> .) ]
  ! CATEGORY        [ reduce using rule 79 (empty -> .) ]
  ! ITEM            [ reduce using rule 79 (empty -> .) ]
  ! COLOR           [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 12
    material                       shift and go to state 11
    category                       shift and go to state 13
    color                          shift and go to state 15
    fulltype                       shift and go to state 31

state 8

    (31) main -> TO . rack side moveitem fulltype ITEM id
    (32) main -> TO . side rack moveitem fulltype ITEM id
    (33) main -> TO . rack side moveitem ITEM fulltype id
    (34) main -> TO . side rack moveitem ITEM fulltype id
    (35) main -> TO . rack side moveitem ITEM id fulltype
    (36) main -> TO . side rack moveitem ITEM id fulltype
    (64) rack -> . shelf lvl
    (65) rack -> . lvl shelf
    (71) side -> . TO SIDE
    (72) side -> . SIDE
    (73) side -> . empty
    (66) shelf -> . SHELF num
    (67) shelf -> . num SHELF
    (68) lvl -> . LVL num
    (69) lvl -> . num LVL
    (70) lvl -> . empty
    (79) empty -> .
    (74) num -> . NUM
    (75) num -> . empty

  ! shift/reduce conflict for SHELF resolved as shift
  ! shift/reduce conflict for LVL resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
    TO              shift and go to state 32
    SIDE            shift and go to state 34
    SHELF           shift and go to state 26
    LVL             shift and go to state 29
    NUM             shift and go to state 23

  ! SHELF           [ reduce using rule 79 (empty -> .) ]
  ! LVL             [ reduce using rule 79 (empty -> .) ]
  ! NUM             [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 35
    lvl                            shift and go to state 22
    side                           shift and go to state 36
    shelf                          shift and go to state 28
    rack                           shift and go to state 33
    num                            shift and go to state 25

state 9

    (56) material -> MATERIAL .

    CATEGORY        reduce using rule 56 (material -> MATERIAL .)
    COLOR           reduce using rule 56 (material -> MATERIAL .)
    ID              reduce using rule 56 (material -> MATERIAL .)
    FROM            reduce using rule 56 (material -> MATERIAL .)
    $end            reduce using rule 56 (material -> MATERIAL .)
    ITEM            reduce using rule 56 (material -> MATERIAL .)
    TO              reduce using rule 56 (material -> MATERIAL .)


state 10

    (58) color -> COLOR .

    MATERIAL        reduce using rule 58 (color -> COLOR .)
    CATEGORY        reduce using rule 58 (color -> COLOR .)
    ITEM            reduce using rule 58 (color -> COLOR .)
    $end            reduce using rule 58 (color -> COLOR .)
    ID              reduce using rule 58 (color -> COLOR .)
    TO              reduce using rule 58 (color -> COLOR .)
    FROM            reduce using rule 58 (color -> COLOR .)


state 11

    (52) fulltype -> material . category color
    (53) fulltype -> material . color category
    (60) category -> . CATEGORY
    (61) category -> . empty
    (58) color -> . COLOR
    (59) color -> . empty
    (79) empty -> .

  ! shift/reduce conflict for COLOR resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
    CATEGORY        shift and go to state 17
    COLOR           shift and go to state 10
    ITEM            reduce using rule 79 (empty -> .)
    ID              reduce using rule 79 (empty -> .)
    $end            reduce using rule 79 (empty -> .)
    TO              reduce using rule 79 (empty -> .)
    FROM            reduce using rule 79 (empty -> .)

  ! COLOR           [ reduce using rule 79 (empty -> .) ]
  ! CATEGORY        [ reduce using rule 79 (empty -> .) ]

    category                       shift and go to state 38
    empty                          shift and go to state 37
    color                          shift and go to state 39

state 12

    (59) color -> empty .
    (57) material -> empty .
    (61) category -> empty .

  ! reduce/reduce conflict for CATEGORY resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for ID resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for FROM resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for ITEM resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for TO resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for MATERIAL resolved using rule 59 (color -> empty .)
  ! reduce/reduce conflict for COLOR resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for FROM resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for ITEM resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for TO resolved using rule 57 (material -> empty .)
  ! reduce/reduce conflict for ID resolved using rule 57 (material -> empty .)
    MATERIAL        reduce using rule 59 (color -> empty .)
    CATEGORY        reduce using rule 57 (material -> empty .)
    COLOR           reduce using rule 57 (material -> empty .)
    ID              reduce using rule 57 (material -> empty .)
    FROM            reduce using rule 57 (material -> empty .)
    $end            reduce using rule 57 (material -> empty .)
    ITEM            reduce using rule 57 (material -> empty .)
    TO              reduce using rule 57 (material -> empty .)

  ! CATEGORY        [ reduce using rule 59 (color -> empty .) ]
  ! ITEM            [ reduce using rule 59 (color -> empty .) ]
  ! $end            [ reduce using rule 59 (color -> empty .) ]
  ! FROM            [ reduce using rule 59 (color -> empty .) ]
  ! TO              [ reduce using rule 59 (color -> empty .) ]
  ! ID              [ reduce using rule 59 (color -> empty .) ]
  ! MATERIAL        [ reduce using rule 61 (category -> empty .) ]
  ! COLOR           [ reduce using rule 61 (category -> empty .) ]
  ! FROM            [ reduce using rule 61 (category -> empty .) ]
  ! $end            [ reduce using rule 61 (category -> empty .) ]
  ! ITEM            [ reduce using rule 61 (category -> empty .) ]
  ! TO              [ reduce using rule 61 (category -> empty .) ]
  ! ID              [ reduce using rule 61 (category -> empty .) ]


state 13

    (54) fulltype -> category . material color
    (55) fulltype -> category . color material
    (56) material -> . MATERIAL
    (57) material -> . empty
    (58) color -> . COLOR
    (59) color -> . empty
    (79) empty -> .

  ! shift/reduce conflict for COLOR resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
    MATERIAL        shift and go to state 9
    COLOR           shift and go to state 10
    ITEM            reduce using rule 79 (empty -> .)
    ID              reduce using rule 79 (empty -> .)
    $end            reduce using rule 79 (empty -> .)
    TO              reduce using rule 79 (empty -> .)
    FROM            reduce using rule 79 (empty -> .)

  ! COLOR           [ reduce using rule 79 (empty -> .) ]
  ! MATERIAL        [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 40
    material                       shift and go to state 41
    color                          shift and go to state 42

state 14

    (37) main -> FIND ITEM . fulltype id
    (38) main -> FIND ITEM . id fulltype
    (50) fulltype -> . color material category
    (51) fulltype -> . color category material
    (52) fulltype -> . material category color
    (53) fulltype -> . material color category
    (54) fulltype -> . category material color
    (55) fulltype -> . category color material
    (76) id -> . ID
    (77) id -> . emptyid
    (58) color -> . COLOR
    (59) color -> . empty
    (56) material -> . MATERIAL
    (57) material -> . empty
    (60) category -> . CATEGORY
    (61) category -> . empty
    (78) emptyid -> .
    (79) empty -> .

  ! shift/reduce conflict for COLOR resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 78 (emptyid -> .)
  ! shift/reduce conflict for COLOR resolved as shift
    ID              shift and go to state 46
    COLOR           shift and go to state 10
    MATERIAL        shift and go to state 9
    CATEGORY        shift and go to state 17
    $end            reduce using rule 78 (emptyid -> .)

  ! COLOR           [ reduce using rule 78 (emptyid -> .) ]
  ! MATERIAL        [ reduce using rule 78 (emptyid -> .) ]
  ! CATEGORY        [ reduce using rule 78 (emptyid -> .) ]
  ! MATERIAL        [ reduce using rule 79 (empty -> .) ]
  ! CATEGORY        [ reduce using rule 79 (empty -> .) ]
  ! ID              [ reduce using rule 79 (empty -> .) ]
  ! $end            [ reduce using rule 79 (empty -> .) ]
  ! COLOR           [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 12
    material                       shift and go to state 11
    category                       shift and go to state 13
    emptyid                        shift and go to state 43
    color                          shift and go to state 15
    id                             shift and go to state 44
    fulltype                       shift and go to state 45

state 15

    (50) fulltype -> color . material category
    (51) fulltype -> color . category material
    (56) material -> . MATERIAL
    (57) material -> . empty
    (60) category -> . CATEGORY
    (61) category -> . empty
    (79) empty -> .

  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
    MATERIAL        shift and go to state 9
    CATEGORY        shift and go to state 17
    ITEM            reduce using rule 79 (empty -> .)
    ID              reduce using rule 79 (empty -> .)
    $end            reduce using rule 79 (empty -> .)
    TO              reduce using rule 79 (empty -> .)
    FROM            reduce using rule 79 (empty -> .)

  ! CATEGORY        [ reduce using rule 79 (empty -> .) ]
  ! MATERIAL        [ reduce using rule 79 (empty -> .) ]

    category                       shift and go to state 49
    empty                          shift and go to state 47
    material                       shift and go to state 48

state 16

    (39) main -> FIND fulltype . ITEM id

    ITEM            shift and go to state 50


state 17

    (60) category -> CATEGORY .

    MATERIAL        reduce using rule 60 (category -> CATEGORY .)
    COLOR           reduce using rule 60 (category -> CATEGORY .)
    FROM            reduce using rule 60 (category -> CATEGORY .)
    $end            reduce using rule 60 (category -> CATEGORY .)
    ITEM            reduce using rule 60 (category -> CATEGORY .)
    ID              reduce using rule 60 (category -> CATEGORY .)
    TO              reduce using rule 60 (category -> CATEGORY .)


state 18

    (27) main -> moveitem ITEM . fulltype id TO rack side
    (28) main -> moveitem ITEM . fulltype id TO side rack
    (29) main -> moveitem ITEM . id fulltype TO rack side
    (30) main -> moveitem ITEM . id fulltype TO side rack
    (50) fulltype -> . color material category
    (51) fulltype -> . color category material
    (52) fulltype -> . material category color
    (53) fulltype -> . material color category
    (54) fulltype -> . category material color
    (55) fulltype -> . category color material
    (76) id -> . ID
    (77) id -> . emptyid
    (58) color -> . COLOR
    (59) color -> . empty
    (56) material -> . MATERIAL
    (57) material -> . empty
    (60) category -> . CATEGORY
    (61) category -> . empty
    (78) emptyid -> .
    (79) empty -> .

  ! shift/reduce conflict for COLOR resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for CATEGORY resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! reduce/reduce conflict for TO resolved using rule 78 (emptyid -> .)
  ! shift/reduce conflict for COLOR resolved as shift
    ID              shift and go to state 46
    COLOR           shift and go to state 10
    MATERIAL        shift and go to state 9
    CATEGORY        shift and go to state 17
    TO              reduce using rule 78 (emptyid -> .)

  ! COLOR           [ reduce using rule 78 (emptyid -> .) ]
  ! MATERIAL        [ reduce using rule 78 (emptyid -> .) ]
  ! CATEGORY        [ reduce using rule 78 (emptyid -> .) ]
  ! MATERIAL        [ reduce using rule 79 (empty -> .) ]
  ! CATEGORY        [ reduce using rule 79 (empty -> .) ]
  ! ID              [ reduce using rule 79 (empty -> .) ]
  ! TO              [ reduce using rule 79 (empty -> .) ]
  ! COLOR           [ reduce using rule 79 (empty -> .) ]

    empty                          shift and go to state 12
    material                       shift and go to state 11
    emptyid                        shift and go to state 43
    category                       shift and go to state 13
    color                          shift and go to state 15
    id                             shift and go to state 51
    fulltype                       shift and go to state 52

state 19

    (25) main -> moveitem fulltype . ITEM id TO rack side
    (26) main -> moveitem fulltype . ITEM id TO side rack

    ITEM            shift and go to state 53


state 20
